<resources>
    <string name="app_name">match-collection</string>
    <string name="btn_objective_collection_select">Objective Collection</string>
    <string name="btn_subjective_collection_select">Subjective Collection</string>
    <string name="low_label">Low</string>
    <string name="high_label">High</string>
    <string name="btn_timer_start">Start Match</string>
    <string name="btn_action_one">Intake Double Station - %1$s</string>
    <string name="btn_action_two">Intake Row</string>
    <string name="btn_action_three">Intake Ground - %1$s</string>
    <string name="btn_action_four">High Cube - %1$s</string>
    <string name="btn_action_five">Mid Cube - %1$s</string>
    <string name="btn_action_six">Low Cube - %1$s</string>
    <string name="btn_action_seven">High Cone - %1$s</string>
    <string name="btn_action_eight">Mid Cone - %1$s</string>
    <string name="btn_action_nine">Low Cone - %1$s</string>
    <string name="btn_action_ten">Failed - %1$s</string>
    <string name="btn_action_thirteen">Intake Single Station - %1$s</string>
    <string name="btn_action_fourteen">Supercharge</string>
    <string name="tb_action_bool_one_off">Start Incap</string>
    <string name="tb_action_bool_one_on">End Incap</string>
    <string name="tb_action_bool_two_disabled">Charge Attempted</string>
    <string name="btn_charge">New Charge Attempt…</string>
    <string name="btn_charged">Charge Attempted\n%1$s</string>
    <string name="btn_undo">Undo</string>
    <string name="btn_redo">Redo</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="btn_proceed">Proceed</string>
    <string name="btn_to_teleop">To Teleop</string>
    <string name="btn_assignment">Automatic Assignment</string>
    <string name="btn_override">Override</string>
    <string name="tv_team_number_input">Team Number</string>
    <string name="tv_team_number_input_one">Team One</string>
    <string name="tv_team_number_input_two">Team Two</string>
    <string name="tv_team_number_input_three">Team Three</string>
    <string name="tv_match_number_input">Match Number</string>
    <string name="btn_id_default">Scout ID: NONE</string>
    <string name="btn_old_QRs_default">Old QRs</string>
    <string name="btn_scout_id_message">Scout ID: %1$s</string>
    <string name="tv_version_num">Version: %1$s</string>
    <string name="tv_event_name">Event Key: %1$s</string>
    <string name="tv_time_display">%1$s - %2$s</string>
    <string name="final_auto_time">135</string>
    <string name="initial_teleop_time">134</string>
    <string name="final_time">0</string>
    <string name="error_back_reset">Do you want to reset everything?</string>
    <string name="error_missing_information">PLEASE INPUT ALL INFORMATION!</string>
    <string name="warning_same_rankings">Are you sure you want to have duplicate rankings?</string>
    <string name="error_same_teams">PLEASE ENSURE ALL TEAMS ARE DIFFERENT!</string>
    <string name="error_serial_num">NO SERIAL NUMBER - PLEASE ENABLE PHONE PERMISSIONS</string>
    <string name="error_qr">INVALID QR!</string>
    <string name="error_file_missing">MATCH SCHEDULE FILE MISSING!</string>
    <string name="error_scout_id_not_found">NO SCOUT ID FOUND!</string>
    <string name="btn_switch_orientation">Switch Orientation</string>
    <string name="no_show_starting_position">NO SHOW</string>
    <string name="one_starting_position">1</string>
    <string name="one_starting_position_none"><big>1</big><small><small>\nNONE</small></small></string>
    <string name="one_starting_position_cone"><big>1</big><small><small>\nCONE</small></small></string>
    <string name="one_starting_position_cube"><big>1</big><small><small>\nCUBE</small></small></string>
    <string name="two_starting_position">2</string>
    <string name="two_starting_position_none"><big>2</big><small><small>\nNONE</small></small></string>
    <string name="two_starting_position_cone"><big>2</big><small><small>\nCONE</small></small></string>
    <string name="two_starting_position_cube"><big>2</big><small><small>\nCUBE</small></small></string>
    <string name="three_starting_position">3</string>
    <string name="three_starting_position_none"><big>3</big><small><small>\nNONE</small></small></string>
    <string name="three_starting_position_cone"><big>3</big><small><small>\nCONE</small></small></string>
    <string name="three_starting_position_cube"><big>3</big><small><small>\nCUBE</small></small></string>
    <string name="four_starting_position">4</string>
    <string name="four_starting_position_none"><big>4</big><small><small>\nNONE</small></small></string>
    <string name="four_starting_position_cone"><big>4</big><small><small>\nCONE</small></small></string>
    <string name="four_starting_position_cube"><big>4</big><small><small>\nCUBE</small></small></string>
    <string name="btn_engaged">Engaged</string>
    <string name="btn_docked">Docked</string>
    <string name="btn_parked">Parked</string>
    <string name="btn_failed">Failed</string>
    <string name="btn_high_row">High Row - %1$s</string>
    <string name="btn_mid_row">Mid Row - %1$s</string>
    <string name="btn_low_row">Low Row - %1$s</string>
    <string name="Five">5</string>
    <string name="start_climb_timer">Start Timer</string>
    <string name="climb_timer">Time: %1$s</string>
    <string name="climb_timer_done">Recorded:\n%1$s sec.</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="playing_defense">Playing defense?</string>
    <string name="quickness">Quickness</string>
    <string name="field_aware">Field Aware</string>
    <string name="timer_run_down">Teleop - 0</string>
    <string name="preloaded">Preloaded:</string>
    <string name="tippy">Was Tippy</string>
    <string name="taken">Taken</string>
    <string name="on_ground">On Ground</string>
    <string name="cone">Cone</string>
    <string name="cube">Cube</string>
    <string name="none">None</string>
    <string name="btn_playoffs">Playoffs</string>
</resources>
