<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/objective_match_collection_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:padding="@dimen/very_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_undo"
                style="@style/btn_action"
                android:text="@string/btn_undo"
                android:layout_weight="0.5"
                android:background="@drawable/btn_undo_selector"
                />

            <Button
                android:id="@+id/btn_action_four"
                style="@style/btn_action"
                android:text="@string/btn_action_four"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/btn_action_five"
                style="@style/btn_action"
                android:text="@string/btn_action_five"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/btn_action_six"
                style="@style/btn_action"
                android:text="@string/btn_action_six"
                android:layout_weight="1"
                android:background="drawable/"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_redo"
                style="@style/btn_action"
                android:text="@string/btn_redo"
                android:layout_weight="0.5"
                android:background="@drawable/btn_redo_selector"
                />

            <Button
                android:id="@+id/btn_action_seven"
                style="@style/btn_action"
                android:layout_weight="1"
                android:text="@string/btn_action_seven"
                android:background="@drawable/btn_action_selector_low"/>

            <Button
                android:id="@+id/btn_action_eight"
                style="@style/btn_action"
                android:layout_weight="1"
                android:text="@string/btn_action_eight"
                android:background="@drawable/btn_action_selector_low"/>

            <Button
                android:id="@+id/btn_action_nine"
                style="@style/btn_action"
                android:layout_weight="1"
                android:text="@string/btn_action_nine"
                android:background="@drawable/btn_action_selector_low"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_action_ten"
        style="@style/btn_action"
        android:text="@string/btn_action_ten"
        android:layout_weight="0.5"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tb_action_one"
            style="@style/btn_action_hor"
            android:textOff="@string/tb_action_bool_one_off"
            android:textOn="@string/tb_action_bool_one_on"
            android:layout_weight="1"
            android:background="@drawable/tb_incap_selector"/>

        <Button
            android:id="@+id/btn_charge"
            style="@style/btn_action_hor"
            android:layout_weight="1"
            android:text="@string/btn_charge"
            android:background="@drawable/tb_charge_selector"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_timer"
            android:background="@drawable/btn_proceed"
            style="@style/btn_proceed"
            android:enabled="true"
            android:text="@string/btn_timer_start" />

        <TextView
            android:id="@+id/tv_team_number"
            style="@style/tv_standard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/small_text" />

        <Button
            android:id="@+id/btn_proceed_edit"
            style="@style/btn_proceed"
            android:enabled="false"
            android:text="@string/btn_to_teleop"
            android:background="@drawable/btn_proceed_selector"/>

    </LinearLayout>

</LinearLayout>