<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_starting_position_map"
        style="@style/iv_starting_position_map"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_zero"
            style="@style/btn_starting_position"
            android:text="@string/no_show_starting_position"
            android:textSize="@dimen/smaller_text"/>

        <Button
            android:id="@+id/btn_one"
            style="@style/btn_starting_position"
            android:text="@string/one_starting_position"/>

        <Button
            android:id="@+id/btn_two"
            style="@style/btn_starting_position"
            android:text="@string/two_starting_position"/>

        <Button
            android:id="@+id/btn_three"
            style="@style/btn_starting_position"
            android:text="@string/three_starting_position"/>

        <Button
            android:id="@+id/btn_four"
            style="@style/btn_starting_position"
            android:text="@string/four_starting_position"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_switch_orientation"
            style="@style/btn_switch_orientation"
            android:layout_weight="2"
            android:text="@string/btn_switch_orientation"/>

        <TextView
            android:id="@+id/tv_pos_team_number"
            style="@style/tv_standard"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_proceed_starting_position"
            style="@style/btn_starting_position_proceed"
            android:layout_weight="2"
            android:text="@string/btn_proceed" />

    </LinearLayout>

</LinearLayout>