<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popup_background"
    android:padding="@dimen/very_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Charging Dock Buttons-->
        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="500dp"
            android:layout_margin="@dimen/small"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_engaged"
                style="@style/btn_charge_level"
                android:text="@string/btn_engaged" />

            <Button
                android:id="@+id/btn_docked"
                style="@style/btn_charge_level"
                android:text="@string/btn_docked" />

            <Button
                android:id="@+id/btn_parked"
                style="@style/btn_charge_level"
                android:text="@string/btn_parked" />

            <Button
                android:id="@+id/btn_failed"
                style="@style/btn_charge_level"
                android:text="@string/btn_failed"
                />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <!--Cancel-->
        <Button
            android:id="@+id/btn_charge_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/cancel"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <!--Done-->
        <Button
            android:enabled = "false"
            android:id="@+id/btn_climb_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/done" />

    </LinearLayout>

</LinearLayout>