<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popup_background"
    android:padding="@dimen/very_small">

            <Button
                android:id="@+id/btn_high_row"
                style="@style/btn_charge_level"
                android:text="@string/btn_high_row" />

            <Button
                android:id="@+id/btn_docked"
                style="@style/btn_charge_level"
                android:text="@string/btn_mid_row" />

            <Button
                android:id="@+id/btn_parked"
                style="@style/btn_charge_level"
                android:text="@string/btn_low_row" />

</LinearLayout>