<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/objective_match_collection_layout_intake"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:padding="@dimen/very_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_action_one"
                style="@style/btn_action"
                android:layout_weight="1.3"
                android:text="@string/btn_action_one"
                android:background="@drawable/btn_action_selector_station"/>

            <Button
                android:id="@+id/btn_action_two"
                style="@style/btn_action"
                android:text="@string/btn_action_two"
                android:layout_weight="0.7"
                android:background="@drawable/btn_action_selector_low_row"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_action_three"
                style="@style/btn_action"
                android:layout_weight="2"
                android:text="@string/btn_action_three"
                android:background="@drawable/btn_action_selector_ground"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>